--- a/day1-done.html
+++ b/day1-done.html
@@ -295,8 +295,8 @@
 
         window.onload = () => {
             const urlParams = new URLSearchParams(window.location.search);
-            // Validation key: erhguibnz
-            if (urlParams.get('v') === 'erhguibnz') {
+            // Validation key: grhvuibmz
+            if (urlParams.get('v') === 'grhvuibmz') {
                 unlock();
             }
         };
