--- a/day1.html
+++ b/day1.html
@@ -295,8 +295,8 @@
 
         window.onload = () => {
             const urlParams = new URLSearchParams(window.location.search);
-            // Validation key: grhvuibmz
-            if (urlParams.get('v') === 'grhvuibmz') {
+            // Validation key: grhvfibmz
+            if (urlParams.get('v') === 'grhvfibmz') {
                 unlock();
             }
         };
