--- a/day2.html
+++ b/day2.html
@@ -22,6 +22,22 @@
             font-family: 'Dancing Script', cursive;
         }
 
+        /* Background Emojis */
+        #bg-emojis {
+            position: fixed;
+            inset: 0;
+            pointer-events: none;
+            z-index: 0;
+            overflow: hidden;
+            transition: opacity 1s ease-in-out;
+        }
+
+        .floating-emoji {
+            position: absolute;
+            opacity: 0.15;
+            user-select: none;
+        }
+
         #gate-screen {
             position: fixed;
             inset: 0;
@@ -45,6 +61,8 @@
             padding: 1.5rem;
             opacity: 0;
             transition: opacity 0.8s ease-in-out;
+            position: relative;
+            z-index: 10;
         }
 
         .unlocked .container {
@@ -121,6 +139,9 @@
 <body>
 
     <div id="flash" class="flash-overlay"></div>
+
+    <!-- Background for Step 1 -->
+    <div id="bg-emojis"></div>
 
     <!-- Security Gate -->
     <div id="gate-screen">
@@ -203,6 +224,22 @@
     </div>
 
     <script>
+        // Generate random emojis for the background
+        function createBackground() {
+            const container = document.getElementById('bg-emojis');
+            const count = 40;
+            for (let i = 0; i < count; i++) {
+                const span = document.createElement('span');
+                span.textContent = '😍';
+                span.className = 'floating-emoji';
+                span.style.left = Math.random() * 100 + 'vw';
+                span.style.top = Math.random() * 100 + 'vh';
+                span.style.fontSize = (Math.random() * 20 + 20) + 'px';
+                span.style.transform = `rotate(${Math.random() * 360}deg)`;
+                container.appendChild(span);
+            }
+        }
+
         function unlock() {
             if (document.body.classList.contains('unlocked')) return;
 
@@ -222,8 +259,9 @@
         }
 
         window.onload = () => {
+            createBackground();
             const urlParams = new URLSearchParams(window.location.search);
-            if (urlParams.get('v') === 'rtakmcgqu') {
+            if (urlParams.get('v') === 'erhguibnz') {
                 unlock();
             }
         };
@@ -241,6 +279,7 @@
             const modal = document.getElementById('question-modal');
             const intro = document.getElementById('intro-view');
             const reveal = document.getElementById('reveal-view');
+            const bg = document.getElementById('bg-emojis');
 
             modal.style.opacity = '0';
             document.getElementById('modal-box').style.transform = 'scale(0.9)';
@@ -249,6 +288,9 @@
                 modal.style.display = 'none';
                 intro.style.opacity = '0';
                 intro.style.transform = 'translateY(-20px)';
+                
+                // Fade out the emojis background
+                bg.style.opacity = '0';
                 
                 setTimeout(() => {
                     intro.classList.add('hidden');
