--- a/day2.html
+++ b/day2.html
@@ -261,7 +261,7 @@
         window.onload = () => {
             createBackground();
             const urlParams = new URLSearchParams(window.location.search);
-            if (urlParams.get('v') === 'erhguibnz') {
+            if (urlParams.get('v') === 'rtakmcgqu') {
                 unlock();
             }
         };
